# server/src/models/openapi.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  shareloop.openapi.yaml
-#   timestamp: 2026-06-30T13:35:48+00:00
+#   timestamp: 2026-06-30T14:31:36+00:00
 
 from __future__ import annotations
 
@@ -76,6 +76,8 @@ class UserProfile(ApiBaseModel):
     rating_count: int = Field(..., alias='ratingCount')
     share_count: int | None = Field(None, alias='shareCount')
     avatar_uuid: UUID | None = Field(None, alias='avatarUuid')
+    follower_count: int | None = Field(None, alias='followerCount')
+    is_followed: bool | None = Field(None, alias='isFollowed')
 
 
 class UserRatingDetail(ApiBaseModel):
